# taslow-email-extraction-agent

./: .env.example  .gitignore  Dockerfile  README.md  inspector_entrypoint.py  pyproject.toml  requirements-inspector.txt
.github/workflows/: ci.yml
evals/: run_synthetic_email_eval.py
evals/datasets/: sample_emails.jsonl
ops/: backfill_project_search.py
src/taslow_email_extraction_agent/: __init__.py  agent_framework_compat.py  app.py  cli.py  config.py  dependencies.py  models.py  services.py  text_utils.py  workflow.py
src/taslow_email_extraction_agent/clients/: __init__.py  project_client.py  project_search_client.py  task_history_client.py
src/taslow_email_extraction_agent/executors/: __init__.py  assignee_resolution.py  due_date.py  project_matching.py  scope_matching.py  task_detection.py  validation.py
src/taslow_email_extraction_agent/prompts/: task_detection.md
tests/: conftest.py  test_api.py  test_workflow.py
