[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taslow-email-extraction-agent"
version = "0.1.0"
description = "Taslow Microsoft Agent Framework email-to-task extraction service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agent-framework>=1.0.0",
  "azure-cosmos>=4.7.0",
  "azure-identity>=1.17.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
taslow-email-agent = "taslow_email_extraction_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
